<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notification</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_username">   输入用户名</string>
    <string name="hint_password">   输入16位密码</string>
    <string name="hint_repassword">   确认密码</string>
    <string name="hint_name">   输入真实姓名</string>
    <string name="hint_sex">   选择您的真实性别</string>
    <string name="hint_phone">   输入电话号码</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="register">注册</string>
    <string name="detail_theme">主题：</string>
    <string name="detail_sender">发送者：</string>
    <string name="detail_message">详细信息：</string>
    <string name="detail_content">....</string>
    <string name="detail_time">发送时间</string>

</resources>
