<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/detail_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="50dip"
        android:background="@drawable/detail_tags_bg" >

        <LinearLayout
            android:id="@+id/head"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/detail_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_weight="2"
                android:text="@string/detail_theme"
                android:textColor="#8B6508"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/detail_sender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dip"
                android:layout_weight="1"
                android:text="@string/detail_sender"
                android:textColor="#8B6508"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head"
            android:layout_marginLeft="50dip"
            android:layout_marginTop="50dip"
            android:text="@string/detail_message"
            android:textColor="#8B6508"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/detail_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/body"
            android:layout_marginLeft="50dip"
            android:layout_marginRight="50dip"
            android:layout_marginTop="15dip"
            android:singleLine="false"
            android:text="@string/detail_content"
            android:textColor="#8B6508"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/detail_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dip"
            android:layout_marginTop="280dip"
            android:text="@string/detail_time"
            android:textColor="#8B6508"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>